# django-session-security

./: .gitignore  CHANGELOG  MAINTENANCE.md  README.rst  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: requirements.txt
docs/source/: conf.py  faq.rst  quick.rst
session_security/: middleware.py  settings.py  utils.py  views.py
session_security/templates/session_security/: all.html
session_security/templatetags/: session_security_tags.py
session_security/tests/: test_base.py  test_middleware.py  test_script.py  test_views.py
session_security/tests/project/: settings.py  urls.py
